# distributed_ray_tracer

./: .gitignore  CMakeLists.txt  README.md
common/: README.md
common/include/: scene.hpp  scene_parser.hpp  serialization.hpp
common/proto/: raytracer.proto
common/src/: scene_parser.cpp  serialization.cpp
master/: main.cpp  master.cpp  master.hpp
render/: README.md
render/examples/: default_scene.ppm  default_scene.scene  showcase.scene  stress_test.scene
render/include/: aabb.hpp  bvh.hpp  camera.hpp  color.hpp  cylinder.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  math_utils.hpp  ray.hpp  renderer.hpp  sphere.hpp  vec3.hpp
render/src/: bvh.cpp  camera.cpp  color.cpp  cylinder.cpp  hittable_list.cpp  main.cpp  material.cpp  renderer.cpp  sphere.cpp  vec3.cpp
worker/: main.cpp  worker.cpp  worker.hpp
